load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

# =============================================================================
# Dataplane gRPC service (packet injection + result observation)
# =============================================================================

proto_library(
    name = "dataplane_proto",
    srcs = ["dataplane.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//simulator:ir_proto",
        "//simulator:simulator_proto",
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "dataplane_java_proto",
    visibility = ["//visibility:public"],
    deps = [":dataplane_proto"],
)

# Public API for external C++ consumers of the dataplane service — kept
# despite having no in-repo reverse deps.
cc_proto_library(
    name = "dataplane_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":dataplane_proto"],
)

cc_grpc_library(
    name = "dataplane_cc_grpc",
    srcs = [":dataplane_proto"],
    # cc_grpc_library's generated code #includes many grpcpp headers without
    # declaring them as deps on the generated target — out of our control.
    features = ["-layering_check"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":dataplane_cc_proto"],
)

java_grpc_library(
    name = "dataplane_java_grpc",
    srcs = [":dataplane_proto"],
    visibility = ["//visibility:public"],
    deps = [":dataplane_java_proto"],
)

kt_jvm_grpc_library(
    name = "dataplane_kt_grpc",
    srcs = [":dataplane_proto"],
    visibility = ["//visibility:public"],
    deps = [":dataplane_java_proto"],
)

# =============================================================================
# P4Runtime gRPC stubs (Kotlin)
# =============================================================================

# Java gRPC stubs for P4Runtime service. (Java proto wrappers live
# in //simulator, not here.)
java_grpc_library(
    name = "p4runtime_java_grpc",
    srcs = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
    visibility = ["//e2e_tests/p4runtime_diff:__pkg__"],
    deps = ["//simulator:p4runtime_java_proto"],
)

# Kotlin gRPC stubs — coroutine-based service base class and client stub.
kt_jvm_grpc_library(
    name = "p4runtime_kt_grpc",
    srcs = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
    visibility = ["//e2e_tests/p4runtime_diff:__pkg__"],
    deps = ["//simulator:p4runtime_java_proto"],
)

# =============================================================================
# P4Runtime server library
# =============================================================================

kt_jvm_library(
    name = "grpc",
    srcs = glob(
        ["*.kt"],
        exclude = [
            "*Test.kt",
            "*TestHarness.kt",
            "*Benchmark.kt",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":constraint_validator_java_proto",
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4runtime_kt_grpc",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_netty",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

kt_jvm_binary(
    name = "fourward_server",
    main_class = "fourward.grpc.FourwardServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":grpc"],
)

# Self-contained fat JAR for distribution. Allows running the server with
# `java -jar fourward_server_jar_deploy.jar` without needing Bazel runfiles.
java_binary(
    name = "fourward_server_jar",
    main_class = "fourward.grpc.FourwardServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":grpc"],
)

# =============================================================================
# Tests
# =============================================================================

kt_jvm_test(
    name = "P4RuntimeConformanceTest",
    srcs = [
        "FourwardTestHarness.kt",
        "P4RuntimeConformanceTest.kt",
    ],
    data = [
        "//e2e_tests/basic_table",
        "//e2e_tests/passthrough",
        "//e2e_tests/trace_tree:action_selector_3",
        "//e2e_tests/trace_tree:clone_with_egress",
    ],
    test_class = "fourward.grpc.P4RuntimeConformanceTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

kt_jvm_test(
    name = "P4RuntimeWriteErrorTest",
    srcs = [
        "FourwardTestHarness.kt",
        "P4RuntimeWriteErrorTest.kt",
    ],
    data = [
        "//e2e_tests/basic_table",
        "//e2e_tests/trace_tree:action_selector_3",
    ],
    test_class = "fourward.grpc.P4RuntimeWriteErrorTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
    ],
)

kt_jvm_test(
    name = "BitLevelSerializationTest",
    srcs = [
        "BitLevelSerializationTest.kt",
        "FourwardTestHarness.kt",
    ],
    data = [
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
        "@p4c//p4include:core.p4",
    ],
    jvm_flags = [
        "-Dp4c_4ward=$(rlocationpath //p4c_backend:p4c-4ward)",
        "-Dp4include=$(rlocationpath @p4c//p4include:core.p4)",
    ],
    test_class = "fourward.grpc.BitLevelSerializationTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//e2e_tests:inline_p4_compiler",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "GoldenErrorTest",
    srcs = [
        "FourwardTestHarness.kt",
        "GoldenErrorTest.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table",
        "//e2e_tests/constrained_table",
        "//e2e_tests/golden_errors:action_profile",
        "//e2e_tests/golden_errors:range_table",
        "//e2e_tests/golden_errors:refers_to",
        "//e2e_tests/golden_errors:stateful",
        "//e2e_tests/golden_errors:value_set",
        "//e2e_tests/lpm_routing",
        "//e2e_tests/passthrough",
        "//e2e_tests/ternary_acl",
        "//e2e_tests/trace_tree:action_selector_3",
        "//e2e_tests/trace_tree:clone_with_egress",
        "//e2e_tests/translated_port",
        "//e2e_tests/translated_type",
    ] + glob(["golden_errors/*.golden.txt"]),
    test_class = "fourward.grpc.GoldenErrorTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "WriteValidatorTest",
    srcs = ["WriteValidatorTest.kt"],
    test_class = "fourward.grpc.WriteValidatorTest",
    deps = [
        ":grpc",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "BytestringsTest",
    srcs = ["BytestringsTest.kt"],
    test_class = "fourward.grpc.BytestringsTest",
    deps = [
        ":grpc",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "EntityReaderTest",
    srcs = ["EntityReaderTest.kt"],
    test_class = "fourward.grpc.EntityReaderTest",
    deps = [
        ":grpc",
        "//simulator",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ReferenceValidatorTest",
    srcs = ["ReferenceValidatorTest.kt"],
    test_class = "fourward.grpc.ReferenceValidatorTest",
    deps = [
        ":grpc",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "RoleMapTest",
    srcs = ["RoleMapTest.kt"],
    test_class = "fourward.grpc.RoleMapTest",
    deps = [
        ":grpc",
        "//simulator:p4info_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TraceEnricherTest",
    srcs = ["TraceEnricherTest.kt"],
    test_class = "fourward.grpc.TraceEnricherTest",
    deps = [
        ":grpc",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TypeTranslatorTest",
    srcs = ["TypeTranslatorTest.kt"],
    test_class = "fourward.grpc.TypeTranslatorTest",
    deps = [
        ":grpc",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ConstraintValidatorTest",
    srcs = ["ConstraintValidatorTest.kt"],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table",
        "//e2e_tests/constrained_table",
    ],
    test_class = "fourward.grpc.ConstraintValidatorTest",
    deps = [
        ":grpc",
        "//bazel:runfiles",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

# =============================================================================
# Constraint validator (p4-constraints subprocess)
# =============================================================================

proto_library(
    name = "constraint_validator_proto",
    srcs = ["constraint_validator.proto"],
    deps = [
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "constraint_validator_java_proto",
    deps = [":constraint_validator_proto"],
)

cc_proto_library(
    name = "constraint_validator_cc_proto",
    deps = [":constraint_validator_proto"],
)

cc_binary(
    name = "constraint_validator",
    srcs = ["constraint_validator.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":constraint_validator_cc_proto",
        "@p4_constraints//p4_constraints/backend:constraint_info",
        "@p4_constraints//p4_constraints/backend:interpreter",
    ],
)

# =============================================================================
# Tests
# =============================================================================

kt_jvm_test(
    name = "P4RuntimeServiceTest",
    srcs = [
        "FourwardTestHarness.kt",
        "P4RuntimeServiceTest.kt",
    ],
    test_class = "fourward.grpc.P4RuntimeServiceTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "PortOverrideTest",
    srcs = [
        "FourwardTestHarness.kt",
        "PortOverrideTest.kt",
    ],
    data = [
        "//e2e_tests/passthrough",
        "//e2e_tests/translated_port",
    ],
    test_class = "fourward.grpc.PortOverrideTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "DisableCheckingTest",
    srcs = [
        "DisableCheckingTest.kt",
        "FourwardTestHarness.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/constrained_table",
        "//e2e_tests/golden_errors:refers_to",
    ],
    test_class = "fourward.grpc.DisableCheckingTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "P4RuntimeConstraintTest",
    srcs = [
        "FourwardTestHarness.kt",
        "P4RuntimeConstraintTest.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table",
        "//e2e_tests/constrained_table",
    ],
    test_class = "fourward.grpc.P4RuntimeConstraintTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "EnrichedTraceGoldenTest",
    srcs = [
        "EnrichedTraceGoldenTest.kt",
        "FourwardTestHarness.kt",
    ],
    data = [
        "enriched_trace.golden.txtpb",
        "//e2e_tests/translated_port",
    ],
    test_class = "fourward.grpc.EnrichedTraceGoldenTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "P4RuntimeTranslationTest",
    srcs = [
        "FourwardTestHarness.kt",
        "P4RuntimeTranslationTest.kt",
    ],
    data = [
        "//e2e_tests/translated_type",
    ],
    test_class = "fourward.grpc.P4RuntimeTranslationTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "PacketBrokerTest",
    srcs = ["PacketBrokerTest.kt"],
    test_class = "fourward.grpc.PacketBrokerTest",
    deps = [
        ":dataplane_java_proto",
        ":grpc",
        "//simulator",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_test(
    name = "DataplaneServiceTest",
    srcs = [
        "DataplaneServiceTest.kt",
        "FourwardTestHarness.kt",
    ],
    data = [
        "//e2e_tests/basic_table",
        "//e2e_tests/passthrough",
        "//e2e_tests/trace_tree:multicast",
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
        "@p4c//p4include:core.p4",
    ],
    jvm_flags = [
        "-Dp4c_4ward=$(rlocationpath //p4c_backend:p4c-4ward)",
        "-Dp4include=$(rlocationpath @p4c//p4include:core.p4)",
    ],
    test_class = "fourward.grpc.DataplaneServiceTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//e2e_tests:inline_p4_compiler",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "PacketHeaderCodecTest",
    srcs = ["PacketHeaderCodecTest.kt"],
    test_class = "fourward.grpc.PacketHeaderCodecTest",
    deps = [
        ":grpc",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "DataplaneBenchmark",
    srcs = [
        "DataplaneBenchmark.kt",
        "FourwardTestHarness.kt",
    ],
    data = [
        "//e2e_tests/sai_p4:sai_middleblock",
    ],
    tags = ["heavy"],
    test_class = "fourward.grpc.DataplaneBenchmark",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "SaiP4E2ETest",
    srcs = [
        "FourwardTestHarness.kt",
        "SaiP4E2ETest.kt",
    ],
    data = [
        "//e2e_tests/sai_p4:sai_middleblock",
    ],
    test_class = "fourward.grpc.SaiP4E2ETest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:p4types_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "RoundTripTest",
    srcs = [
        "FourwardTestHarness.kt",
        "RoundTripTest.kt",
    ],
    data = [
        "//e2e_tests/translation_round_trip:round_trip",
    ],
    test_class = "fourward.grpc.RoundTripTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)

kt_jvm_test(
    name = "SaiP4ConstraintTest",
    srcs = [
        "FourwardTestHarness.kt",
        "SaiP4ConstraintTest.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/sai_p4:sai_middleblock",
    ],
    test_class = "fourward.grpc.SaiP4ConstraintTest",
    deps = [
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":grpc",
        ":p4runtime_kt_grpc",
        "//bazel:runfiles",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4data_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@googleapis//google/rpc:rpc_java_proto",
    ],
)
