load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

# Shared so e2e_tests/p4runtime_diff can compile the same fixture for BMv2.
exports_files(
    ["basic_table.p4"],
    visibility = ["//e2e_tests/p4runtime_diff:__pkg__"],
)

fourward_pipeline(
    name = "basic_table",
    src = "basic_table.p4",
    out = "basic_table.txtpb",
    visibility = [
        "//cli:__pkg__",
        "//grpc:__pkg__",
        "//web:__pkg__",
    ],
)

kt_jvm_test(
    name = "basic_table_test",
    srcs = ["BasicTableTest.kt"],
    data = [
        "basic_table.stf",
        ":basic_table",
    ],
    test_class = "fourward.e2e.basictable.BasicTableTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
