load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "passthrough",
    src = "passthrough.p4",
    out = "passthrough.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)

fourward_pipeline(
    name = "passthrough_p4runtime",
    src = "passthrough.p4",
    out = "passthrough_p4runtime.binpb",
    out_format = "p4runtime",
    visibility = ["//p4runtime_cc:__pkg__"],
)

# Runs the passthrough STF test against the 4ward simulator.
kt_jvm_test(
    name = "passthrough_test",
    srcs = ["PassthroughTest.kt"],
    data = [
        "passthrough.stf",
        ":passthrough",
    ],
    test_class = "fourward.e2e.passthrough.PassthroughTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
