load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "translated_type",
    src = "translated_type.p4",
    out = "translated_type.txtpb",
    visibility = ["//grpc:__pkg__"],
)
